# cnos25

./: .gitignore  LICENSE  README.md  inference_demo.ipynb  onboarding_demo.ipynb  pyproject.toml  run_inference.py
configs/: extract_templates.yaml  local.yaml  run_inference.yaml  run_nms.yaml  run_vis.yaml
configs/data/: bop.yaml  custom_datasets.yaml
configs/machine/: local.yaml
configs/model/: cnos25.yaml
configs/model/descriptor/: dinov3.yaml
configs/model/proposal/: yoloe.yaml
configs/postprocess/: nms.yaml
src/dataloader/: base_bop.py  bop.py  bop_hot3d.py
src/model/: cnos25.py  matching.py
src/model/descriptor/: descriptor_model.py  template_extraction.py
src/model/proposal/: yoloe.py
src/scripts/: convert_npz_to_json.py  extract_template_descriptors.py  postprocessing.py  visualize_detectron2.py
src/utils/: bbox_utils.py  bop_eval.py  detection_utils.py  imgproc.py  segment_anything_transforms.py  visualization_detectron2.py
val_targets/handal/: val_targets_bop24.json
val_targets/hopev2/: val_targets_bop24.json
