[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnos25"
version = "0.1"
description = "Tempalate-based novel object detection and segmentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "numpy",
    "omegaconf",
    "pandas",
    "pycocotools",
    "pillow",
    "ruamel.yaml",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
    "matplotlib",
    "opencv-python",
    "ultralytics",
    "supervision",
    "torchvision",
    "ftfy",
    "bop_toolkit_lib @ git+https://github.com/thodan/bop_toolkit.git"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]